--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,34 @@
 version: '3.8'
 
 services:
-  # 1. Kafka (The Request Pipe)
   kafka:
     image: confluentinc/cp-kafka:latest
     container_name: kafka
     ports:
       - "9092:9092"
     environment:
-      CLUSTER_ID: Zk3sQ2yRTUe8uP4a9Lm7Hw
+      # --- KRaft / Mode Settings ---
       KAFKA_NODE_ID: 1
-      KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka:9093'
+      CLUSTER_ID: 'Zk3sQ2yRTUe8uP4a9Lm7Hw'
+
+      # --- Listeners (Explicitly Quoted) ---
+      # EXTERNAL is for your C# code (localhost:9092)
+      # INTERNAL is for Kafka-UI (kafka:29092)
+      # CONTROLLER is for Kafka's internal cluster management
+      KAFKA_LISTENERS: 'INTERNAL://0.0.0.0:29092,EXTERNAL://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka:29092,EXTERNAL://localhost:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
+
+      # --- Reliability ---
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
 
-  # 2. Redis (The Response Bridge & Coordinator)
   redis:
     image: redis:alpine
     container_name: redis
@@ -28,24 +36,22 @@ services:
     ports:
       - "6379:6379"
 
-  # 3. SQL Server (System of Record - Optional for this demo)
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sqlserver
     environment:
       ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "password123"
+      MSSQL_SA_PASSWORD: "YourStrongPassword123!"
     ports:
       - "1433:1433"
 
-  # 4. Kafka UI (Visualizer - Optional but recommended)
   kafka-ui:
-    image: provectuslabs/kafka-ui
+    image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
     ports:
       - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 'kafka:29092'
     depends_on:
       - kafka
