--- a/src/AdjudicationWorker/appsettings.json
+++ b/src/AdjudicationWorker/appsettings.json
@@ -1,8 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "RedisSettings": {
+        "ConnectionString": "localhost:6379,password=redis123",
+        "ResponseChannel": "claim-responses"
+    },
+    "KafkaSettings": {
+        "BootstrapServers": "localhost:9092",
+        "ClaimsTopic": "pharmacy-claims",
+        "TimeoutSeconds": 15
     }
-  }
 }
