--- a/src/ApiGateway/appsettings.json
+++ b/src/ApiGateway/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Kafka": {
+        "BootstrapServers": "localhost:9092",
+        "RequestTopic": "pharmacy-claims",
+        "TimeoutSeconds": 15
+    },
+    "Redis": {
+        "ConnectionString": "localhost:6379,password=redis123",
+        "ResponseChannel": "claim-responses"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
