added message stale check.

--- a/src/AdjudicationWorker/appsettings.json
+++ b/src/AdjudicationWorker/appsettings.json
@@ -8,7 +8,8 @@
     "AllowedHosts": "*",
     "RedisSettings": {
         "ConnectionString": "localhost:6379,password=redis123",
-        "ResponseChannel": "claim-responses"
+        "ResponseChannel": "claim-responses",
+        "MaxProcessingAgeSeconds": 3
     },
     "KafkaSettings": {
         "BootstrapServers": "localhost:9092",
