added sample micro services and typed clients.

--- a/src/AdjudicationWorker/appsettings.json
+++ b/src/AdjudicationWorker/appsettings.json
@@ -1,19 +1,56 @@
 {
+    "EligibilityApi": {
+        "BaseUrl": "https://localhost:7125/",
+        "RouteTemplate": "api/v1/{endpoint}",
+        "Scope": "service-a.read write",
+        "RetryCount": 3,
+        "TimeoutSeconds": 5,
+        "HedgedAttempts": 2,
+        "HedgingDelayMs": 50,
+        "BulkheadLimit": 10,
+        "BulkheadQueueLimit": 50,
+        "EnableRequestLogging": true
+    },
+    "CoverageApi": {
+        "BaseUrl": "https://localhost:7226/",
+        "RouteTemplate": "v2/{endpoint}",
+        "Scope": "service-b.read",
+        "RetryCount": 2,
+        "TimeoutSeconds": 3,
+        "HedgedAttempts": 2,
+        "HedgingDelayMs": 100,
+        "BulkheadLimit": 5,
+        "BulkheadQueueLimit": 20,
+        "EnableRequestLogging": false
+    },
+    "PricingApi": {
+        "BaseUrl": "https://localhost:7135/",
+        "RouteTemplate": "v2/{endpoint}",
+        "Scope": "service-b.read",
+        "RetryCount": 2,
+        "TimeoutSeconds": 3,
+        "HedgedAttempts": 2,
+        "HedgingDelayMs": 100,
+        "BulkheadLimit": 5,
+        "BulkheadQueueLimit": 20,
+        "EnableRequestLogging": false
+    },
+    "Kafka": {
+        "BootstrapServers": "localhost:9092",
+        "ClaimsTopic": "pharmacy-claims",
+        "DlqTopic": "pharmacy-claims-dlq",
+        "ClaimTimeoutSeconds": 15
+    },
+    "Redis": {
+        "ConnectionString": "localhost:6379,password=redis123",
+        "ResponseChannel": "claim-responses",
+        "MaxProcessingAgeSeconds": 30
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
         }
-    },
-    "AllowedHosts": "*",
-    "RedisSettings": {
-        "ConnectionString": "localhost:6379,password=redis123",
-        "ResponseChannel": "claim-responses",
-        "MaxProcessingAgeSeconds": 3
-    },
-    "KafkaSettings": {
-        "BootstrapServers": "localhost:9092",
-        "ClaimsTopic": "pharmacy-claims",
-        "TimeoutSeconds": 15
     }
 }
