passing transaction id.

--- a/src/AdjudicationWorker/appsettings.json
+++ b/src/AdjudicationWorker/appsettings.json
@@ -13,7 +13,7 @@
     },
     "CoverageApi": {
         "BaseUrl": "https://localhost:7226/",
-        "RouteTemplate": "v2/{endpoint}",
+        "RouteTemplate": "api/v1/{endpoint}",
         "Scope": "service-b.read",
         "RetryCount": 2,
         "TimeoutSeconds": 3,
@@ -25,7 +25,7 @@
     },
     "PricingApi": {
         "BaseUrl": "https://localhost:7135/",
-        "RouteTemplate": "v2/{endpoint}",
+        "RouteTemplate": "api/v1/{endpoint}",
         "Scope": "service-b.read",
         "RetryCount": 2,
         "TimeoutSeconds": 3,
