--- a/CoverageApi/CoverageApi.csproj
+++ b/CoverageApi/CoverageApi.csproj
@@ -12,4 +12,8 @@
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\SharedContracts\SharedContracts.csproj" />
+  </ItemGroup>
+
 </Project>
