changed to use redis stream instead of kafka.

--- a/src/AdjudicationWorker/appsettings.json
+++ b/src/AdjudicationWorker/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "Worker": {
+        "ClaimTimeoutSeconds": 12
+    },
     "EligibilityApi": {
         "BaseUrl": "https://localhost:7125/",
         "RouteTemplate": "api/v1/{endpoint}",
@@ -44,7 +47,10 @@
     "Redis": {
         "ConnectionString": "localhost:6379,password=redis123",
         "ResponseChannel": "claim-responses",
-        "MaxProcessingAgeSeconds": 30
+        "MaxProcessingAgeSeconds": 30,
+        "StreamName": "pharmacy-claims",
+        "ConsumerGroup": "adjudication-group",
+        "ClaimTimeoutSeconds": 12
     },
     "Logging": {
         "LogLevel": {
