--- a/src/ApiGateway/appsettings.json
+++ b/src/ApiGateway/appsettings.json
@@ -6,6 +6,7 @@
     },
     "Redis": {
         "ConnectionString": "localhost:6379,password=redis123",
+        "RequestTopic": "pharmacy-claims",
         "ResponseChannel": "claim-responses"
     },
     "Logging": {
