--- a/src/AacApi/AacApi.csproj
+++ b/src/AacApi/AacApi.csproj
@@ -13,10 +13,11 @@
 	<ItemGroup>
 		<PackageReference Include="ClosedXML" Version="0.105.0" />
 		<PackageReference Include="CsvHelper" Version="33.1.0" />
-		<PackageReference Include="Grpc.AspNetCore" Version="2.64.0" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
-		<PackageReference Include="Scalar.AspNetCore" Version="2.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="10.0.0" />
+		<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.76.0" />
+		<PackageReference Include="Grpc.AspNetCore" Version="2.76.0" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+		<PackageReference Include="Scalar.AspNetCore" Version="2.12.20" />
+		<PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="10.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="10.2.0" />
 		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
@@ -24,14 +25,6 @@
 		<PackageReference Include="RepoDb.SqlServer" Version="1.13.1" />
 		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="10.0.2" />
 		<PackageReference Include="RepoDb.SqlServer.BulkOperations" Version="1.13.1" />
+		<PackageReference Include="SharedContracts" Version="1.0.5" />
 	</ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SharedContracts\SharedContracts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="AppServices\" />
-  </ItemGroup>
-
 </Project>
