--- a/src/FormularyApi/FormularyApi.csproj
+++ b/src/FormularyApi/FormularyApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -12,13 +12,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.64.0" />
+	<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.76.0" />
+	<PackageReference Include="Grpc.AspNetCore" Version="2.76.0" />
+	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+	<PackageReference Include="Scalar.AspNetCore" Version="2.12.20" />
+	<PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="10.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
-    <PackageReference Include="SharedContracts" Version="1.0.0" />
+    <PackageReference Include="SharedContracts" Version="1.0.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\AdjudicationEngine.ServiceDefaults\AdjudicationEngine.ServiceDefaults.csproj" />
+    <Folder Include="Modules\" />
   </ItemGroup>
-
 </Project>
