--- a/src/SharedContracts/SharedContracts.csproj
+++ b/src/SharedContracts/SharedContracts.csproj
@@ -5,19 +5,19 @@
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Ming Lu</Authors>
-		<Version>1.0.0</Version>
+		<Version>1.0.5</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.29.0" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.67.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.67.0">
+		<PackageReference Include="Google.Protobuf" Version="3.33.4" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.76.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.76.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\greet.proto" GrpcServices="Both" Pack="true" PackagePath="protos" />
+		<Protobuf Include="Protos\*.proto" GrpcServices="Both" AdditionalImportDirs="%(RelativeDir);$(Protobuf_StandardImportsPath)" />
 	</ItemGroup>
 </Project>
