--- a/src/SharedContracts/SharedContracts.csproj
+++ b/src/SharedContracts/SharedContracts.csproj
@@ -5,10 +5,13 @@
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>Ming Lu</Authors>
-		<Version>1.0.5</Version>
+		<Version>1.0.6</Version>
 	</PropertyGroup>
-
+	<PropertyGroup>
+		<IncludeHttpRuleProtos>true</IncludeHttpRuleProtos>
+	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Google.Api.CommonProtos" Version="2.17.0" />
 		<PackageReference Include="Google.Protobuf" Version="3.33.4" />
 		<PackageReference Include="Grpc.Net.Client" Version="2.76.0" />
 		<PackageReference Include="Grpc.Tools" Version="2.76.0">
@@ -18,6 +21,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Protobuf Include="Protos\*.proto" GrpcServices="Both" AdditionalImportDirs="%(RelativeDir);$(Protobuf_StandardImportsPath)" />
+		<Protobuf Include="Protos\aac.proto" ProtoRoot="Protos" GrpcServices="Both" />
+		<Protobuf Include="Protos\greet.proto" ProtoRoot="Protos" GrpcServices="Both" />
+		<Protobuf Include="Protos\google\api\*.proto" ProtoRoot="Protos" CompileOutputs="false" />
+
+		<Content Include="Protos\**\*.proto">
+			<Pack>true</Pack>
+			<PackagePath>content/protos</PackagePath>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Protos\google\protobuf\" />
 	</ItemGroup>
 </Project>
