--- a/PricingApi/PricingApi.csproj
+++ b/PricingApi/PricingApi.csproj
@@ -1,19 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
-	  <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="10.0.2" />
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="10.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+    <PackageReference Include="SharedContracts" Version="1.0.0-pre.202601281450" GeneratePathProperty="true" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\src\SharedContracts\SharedContracts.csproj" />
-  </ItemGroup>
-
 </Project>
