added dead claim cleaner azure functon.

--- a/src/AdjudicationWorker/AdjudicationWorker.csproj
+++ b/src/AdjudicationWorker/AdjudicationWorker.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-AdjudicationWorker-584e12cb-8f27-475d-a1c8-da0503e20de9</UserSecretsId>
+	<LangVersion>14.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
