--- a/src/AdjudicationWorker/appsettings.json
+++ b/src/AdjudicationWorker/appsettings.json
@@ -50,6 +50,7 @@
         "MaxProcessingAgeSeconds": 30,
         "StreamName": "pharmacy-claims",
         "ConsumerGroup": "adjudication-group",
+        "ConsumerNamePrefix": "AdjudicationWorker",
         "ClaimTimeoutSeconds": 12
     },
     "Logging": {
